--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "better-scroll": "^2.0.7",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.0",
+    "js-cookie": "^2.2.1",
+    "mockjs": "^1.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
